@@ -290,6 +290,25 @@ class ScalatraRestExample extends ScalatraServlet {
     </rss>
   }
 
+  get("/carRecords") {
+    contentType = "application/xml"
+    <records>
+      <car name='HSV Maloo' make='Holden' year='2006'>
+        <country>Australia</country>
+        <record type='speed'>Production Pickup Truck with speed of 271kph</record>
+      </car>
+      <car name='P50' make='Peel' year='1962'>
+        <country>Isle of Man</country>
+        <record type='size'>Smallest Street-Legal Car at 99cm wide and 59 kg in weight</record>
+      </car>
+      <car name='Royale' make='Bugatti' year='1931'>
+        <country>France</country>
+        <record type='price'>Most Valuable Car at $15 million</record>
+      </car>
+    </records>
+  }
+
+
   def getBinaryBodyResponse: String = {
     contentType = "text/plain";
     Stream.continually(request.getInputStream().read).takeWhile(_ != -1).map(_.toByte).toList.mkString(", ")
